--- a/lat1.html
+++ b/lat1.html
@@ -6,6 +6,6 @@
 <body bgcolor="silver" text="blue" vlink="#ff000" link="green">
 	ini adalah contoh penggunaan body.
 	dan ini sebuah <a href=" =">link</a>
-	<h2>ADE SHERINA</h2>
+	selamat belajar html<br> semoga sukses
 </body>
 </html>
