--- a/lat1.html
+++ b/lat1.html
@@ -7,5 +7,8 @@
 	ini adalah contoh penggunaan body.
 	dan ini sebuah <a href=" =">link</a>
 	selamat belajar html<br> semoga sukses
+	<h1> Ade</h1>
+	<h2>Ade</h2>
+	<h3>sheri</h3>
 </body>
 </html>
