--- a/latihan1.html
+++ b/latihan1.html
@@ -38,5 +38,21 @@
 			Next
 		Next
 		</pre>
+	<p>Keluarga Pandawa</p>
+		<oi>
+			<li>Yudistira</li>
+			<li>Bima</li>
+			<li>Arjuna</li>
+			<li>Nakula</li>
+			<li>Sadewa</li>
+		</oi>
+		<p>Jenis Musik</p>
+		<ul>
+			<li>Campur Sari</li>
+			<li>Dangdut</li>
+			<li>Jazz</li>
+			<li>Pop</li>
+			<li>Rock</li>
+		</ul>
 </body>
 </html>
