--- a/latihan1.html
+++ b/latihan1.html
@@ -54,5 +54,9 @@
 			<li>Pop</li>
 			<li>Rock</li>
 		</ul>
+	<b>Kalimat ini akan dicetak tebal</b><br>
+		<i>Kalimat ini akan dicetak miring</i><br>
+		<u>Kalimat ini akan bergaris bawah</u><br>
+		<strike>Kalimat ini akan bergaris tengah</strike>
 </body>
 </html>
