--- a/latihan1.html
+++ b/latihan1.html
@@ -65,5 +65,9 @@
 		<font face="times new roman" size="6" color="blue">
 			Jenis font ini adalah Times New Roman, berwarna biru, ukurannya 6
 		</font>
+	<img src="bubbles.jpg" alt="gambar gelembung" align="middle"/>
+		Gambar ini terdapat pada windows 98 secara default, anda boleh
+		menggantinya.
+		Tapi Males :)
 </body>
 </html>
