--- a/latihan1.html
+++ b/latihan1.html
@@ -92,5 +92,8 @@
 				<td>Baris 2 kolom 3</td>
 			</tr>
 		</table>
+	<h2 style="text-decoration:underline;">Pandawa</h2>
+		<p style="color:blue;">Nakula dan Sadewa adalah adalah saudara kembar.
+		Mereka adalah adik tiri Yudistira, Bima, Arjuna.</p>
 </body>
 </html>
