--- a/latihan1.html
+++ b/latihan1.html
@@ -95,5 +95,17 @@
 	<h2 style="text-decoration:underline;">Pandawa</h2>
 		<p style="color:blue;">Nakula dan Sadewa adalah adalah saudara kembar.
 		Mereka adalah adik tiri Yudistira, Bima, Arjuna.</p>
+		<style type="text/css">
+			h2 { text-decoration:underline; }
+			p { color:blue; }
+			.example { background:yellow;color:red; }
+		</style>
+	</head>
+	<body>
+		<h2>Pandawa</h2>
+		<p>Nakula dan Sadewa adalah adalah saudara kembar. Mereka
+		adalah adik tiri Yudistira, Bima, Arjuna.</p>
+		<p>Namun, <span class="example">kesetiaan</span> mereka
+		pada Pandawa tak pernah goyah.</p>
 </body>
 </html>
