--- a/latihan1.html
+++ b/latihan1.html
@@ -107,5 +107,15 @@
 		adalah adik tiri Yudistira, Bima, Arjuna.</p>
 		<p>Namun, <span class="example">kesetiaan</span> mereka
 		pada Pandawa tak pernah goyah.</p>
+	<h2>Bima</h2>
+		<p>
+			Bima adalah anak ke-2 <span class="dewi_kunti">Dewi Kunti</span> dan
+			<span class="pandhu">Pandhu</span>
+		</p>
+		<p id="info_bima">
+			Nama lainnya adalah Bimasena dan Werkudara<br/>
+			Bahasa yang digunakan selalu kasar dan selalu menakutkan musuh,
+			walaupun hatinya baik
+		</p>
 </body>
 </html>
